--- a/05_Advection_Diffusion/Advection_Diffusion.Rnw
+++ b/05_Advection_Diffusion/Advection_Diffusion.Rnw
@@ -6,7 +6,7 @@
 \usepackage{graphicx}
 \usepackage{natbib}
 \usepackage{cancel}
-%\usepackage{comment}
+\usepackage{comment}
 
 \setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
 \bibfont{\small} % Doesn't see to work...
@@ -35,7 +35,7 @@
 
 \title{DRAFT! Advection, Diffusion \& Reaction Modeling}
 \author{Marc Los Huertos}
-\date{\today~(ver.~0.69 working toward v .8)}
+\date{\today~(ver.~0.81)}
 
 \setsidenotefont{\color{blue}}
 % \setcaptionfont{hfont commandsi}
@@ -86,11 +86,9 @@ Because these processes are complex and are often difficult to measure, we rely 
 
 \subsection{The Processes}
 
-Advection and diffusion govern the transport of solutes in the environment. Advection is the transport of a solute by the bulk motion of the fluid. Advection depends on velocity or $\nu$ in this session. Diffusion is the transport of a solute by random molecular motion. Diffusion depends on the diffusion coefficient and concentration gradient or $\frac{\partial^2 C}{\partial x^2}$ in this session. Notice that this is the second derivative. 
+As an example of the three processes consider a droplet of dye in water as a dose in a solution. The dye will move with the bulk motion of the water (advection), spread out by random molecular motion (diffusion)(Figure~\ref{fig:diffusion}), and disappear as it reacts with the water (reaction).
 
-Reaction is the transformation of a solute into a different compound. Reaction depends on the reaction rate or $k$ in this session.
-
-In a simple example, if we have a dose of a solute, like a dye in the center of some media, we'll see it spread out by diffusion (Figure~\ref{fig:diffusion}). If the media is moving, we'll see the dye move with the bulk motion of the media. If the dye reacts with the media, we'll see the dye disappear.
+Advection and diffusion govern the transport of solutes in the environment. Advection is the transport of a solute by the bulk motion of the fluid. Advection depends on velocity or $\nu$ in this session. Diffusion is the transport of a solute by random molecular motion. Diffusion depends on the diffusion coefficient and the concentration gradient or $\frac{\partial^2 C}{\partial x^2}$ in this session. Notice that this is the second derivative. 
 
 \begin{marginfigure}
 \caption{A simple diagram of 2D diffusion. To solve these equations, we'll use a numerical approach and descretize the media into a grid. We'll then solve the equations for each grid cell.}
@@ -98,8 +96,17 @@ In a simple example, if we have a dose of a solute, like a dye in the center of 
 \includegraphics[width=1.0\textwidth]{graphics/2D_diffusion.png}
 \end{marginfigure}
 
+Reaction is the transformation of a solute into a different compound. Reaction depends on the reaction rate or $k$ in this session.
 
-Besides examples we often see with respect to air pollution sources (Figure~\ref{fig:advection-diffusion}), we might think about solutes as pollutants or nutrients. For example, the movement of a nutrient in a river is driven by the bulk motion of the water (advection) and the random motion of the molecules (diffusion) and the reactions that might occur in the water column and sediments (Figure\ref{fig:nutrientspiraling}).
+In the case of air pollution, we are interested in the pollutant in the context of the air -- or the media of air (Figure~\ref{fig:advection-diffusion}). And for air pollution, the chemical transormations are a critical part of our regulatory framework (Figure~\ref{}). In the case of water, we might think about solutes in the water as a media. For example, the movement of a nutrient in a river is driven by the bulk motion of the water (advection) through the water column and the sediments (two types of media) and the random motion of the molecules (diffusion) and the reactions that might occur in the water column and sediments (Figure\ref{fig:nutrientspiraling}).
+
+\begin{figure*}
+\caption{A simple diagram of advection and diffusion in the context of air pollution.}
+\label{fig:smog}
+\centering
+\includegraphics[width=0.99\textwidth]{graphics/sources-of-air-pollution-310314_orig.png}
+\end{figure*}
+
 
 \begin{figure}
 \caption{A simple diagram of advection and nutrient reactions (organic substances and inorganic substances) in a river. Although not shown, you might also think about how diffusion might influence the movement of nutrients in the river and in the sediments.  
@@ -108,8 +115,7 @@ The zone where water moves into the sediment bed is called the hyperreic zone. T
 \centering
 \includegraphics[width=0.99\textwidth]{graphics/NutrientSpiraling.jpg}
 \end{figure}
-
-
+jk
 \subsection{Session Goals}
 
 We will not become experts in advection-diffusion-reaction modeling, but we will become familiar with the processes and the equations that describe them. Moreover, we'll see a bit more about how R can be used to model these processes. After this session, I hope you can do the following:
@@ -133,11 +139,7 @@ In this session, we'll want to think about the movement of solutes in the porous
 
 %We'll start with one-dimensional systems and then move to two-dimensional systems. We'll also consider the effects of reactions on the movement of solutes.
 
-\section{The Processes and the Equations to Describe Them}
-
-\subsection{Advection and Convection: Material and Heat}
-
-Advection is the transport of a substance by bulk motion. Convection is the transfer of heat by the actual movement of the warmed matter. The equation that are used to describe advection and convection are similar, but the physical processes are different.
+\section{Equations to Describe Processes}
 
 \newthought{An Equation that Often Creates Anxiety}
 
@@ -151,17 +153,54 @@ The advection equation is a partial differential equation that describes the mov
 
 \begin{equation}
 \frac{\partial C}{\partial t} = D_x \frac{partial^2 C}{partial x^2} +
-D_y \frac{partial^2 C}{partial y^2} +
-D_z \frac{partial^2 C}{partial z^2} -
+D_y \frac{\partial^2 C}{\partial y^2} +
+D_z \frac{\partial^2 C}{\partial z^2} -
 v_x \frac{\partial C}{\partial x} -
 \lambda RC
 \end{equation}
 
+Here $D$ is the ``diffusion coefficient'', $\nu$ is the ``advection rate'' (or velocity), and $A_x$ and $\xi$ are the surface area and volume fraction, respectively.
+
+As you complete the first part of this handout, please do some reflecting: 
+
+\begin{quote}
+
+What you look at this equation, think about how it makes you feel. It's a bit intimidating, to say the least. But that's only part of the story. I believe these equations, when put in front of is generates anxiety -- and this anxiety can be a barrier to learning. While it's easy to claim we can just put this anxiety away seems to be be a disservice and acknoweldgement of our emotional responses. Before moving forward, let's take a moment to acknowledge the anxiety and see where in your body you are feeling that. Take a deep breath and let it out several times before moving forward.
+
+\end{quote} 
+
+First, let's simplify this to 1-D (in one direction, x).
+
+\begin{equation}
+\frac{\partial C}{\partial t} = D \frac{\partial^2 C}{\partial x^2} - \nu \frac{\partial C}{\partial x} - R
+\end{equation}
+
+\subsection{Left side: $\frac{\partial C}{\partial t}$}
+
+The left side of the equation describes the change in concentration over time. This is the rate of change of the concentration of the solute in the fluid. In steady state, this term is zero, which will use use to model the steady state concentration of the solute in the fluid.
+
+\subsection{First term on the right side: $D \frac{\partial^2 C}{\partial x^2}$}
+
+The first term on the right side of the equation describes the movement of the solute due to diffusion. This is the rate of change of the concentration of the solute in the fluid due to the movement of the solute from areas of high concentration to areas of low concentration.
+
+\subsection{Second term on the right side: $- \nu \frac{\partial C}{\partial x}$}
+
+The second term on the right side of the equation describes the movement of the solute due to advection. This is the rate of change of the concentration of the solute in the fluid due to the movement of the fluid.
+
+\subsection{Third term on the right side: $- R$}
+
+The third term on the right side of the equation describes the rate of change of the concentration of the solute in the fluid due to reactions. This is the rate of change of the concentration of the solute in the fluid due to the reaction of the solute with other compounds in the fluid.
+
+\begin{quote}
+\textbf{Pause for a moment:} Reflect on your emotional state. What are you feeling? Where are you feeling it? Take a deep breath and let it out several times. You have completed the reading for Wednesday's class. 
+\end{quote}
 
 
 
 
-Here $D$ is the ``diffusion coefficient'', $\nu$ is the ``advection rate'' (or velocity), and $A_x$ and $\xi$ are the surface area and volume fraction, respectively.\sidenote{What you look at this equation, think about how it makes you feel. It's a bit intimidating, to say the least. But that's only part of the story. I believe these equations, when put in front of is generates anxiety -- and this anxiety can be a barrier to learning. While it's easy to claim we can just put this anxiety away seems to be be a disservice and acknoweldgement of our emotional responses. Before moving forward, let's take a moment to acknowledge the anxiety and see where in your body you are feeling that. Take a deep breath and let it out several times before moving forward.} 
+\begin{comment}
+
+
 
 Assuming that A, $\xi$, D and v are constant along x, we can rewrite this in a more general form: 
 
@@ -755,6 +794,10 @@ imposed by binding a column or row with 0-s.
 
 \section{The Theory}
 
+\subsection{Advection and Convection: Material and Heat}
+
+Advection is the transport of a substance by bulk motion. Convection is the transfer of heat by the actual movement of the warmed matter. The equation that are used to describe advection and convection are similar, but the physical processes are different.
+
 \subsection{Solving the advection-diffusion equation}
 
 The advection-diffusion equation is a partial differential equation that describes the transport of a substance by both diffusion and advection.
@@ -912,6 +955,11 @@ Some Caveats:
 
 \section{Conclusion}
 
+\end{comment}
+
+\newpage
+
+\section{References}
 
 % bibiliography section here-------------------------------------------
 %\clearpage
