--- a/05_Advection_Diffusion/Advection_Diffusion.tex
+++ b/05_Advection_Diffusion/Advection_Diffusion.tex
@@ -197,16 +197,15 @@ The advection equation is a partial differential equation that describes the mov
 
 %− 1 Axξx ·( ∂ ∂xAx·(−D· ∂ξxC ∂x )− ∂ ∂x(Ax·v·ξxC)) 
 
-\begin{equation}
-- \frac{1}{A_x \xi_x} \cdot \left( \frac{\partial}{\partial x} A_x \cdot \left( -D \cdot \frac{\partial \xi_x C}{\partial x} \right) - \frac{\partial}{\partial x} \left( A_x \cdot v \cdot \xi_x C \right) \right)
-\end{equation}
+%\begin{equation}
+%- \frac{1}{A_x \xi_x} \cdot \left( \frac{\partial}{\partial x} A_x \cdot \left( -D \cdot %\frac{\partial \xi_x C}{\partial x} \right) - \frac{\partial}{\partial x} \left( A_x \cdot v \cdot \xi_x C \right) \right)
+%\end{equation}
 
 \begin{equation}
-\frac{\partial C}{\partial t} = D_x \frac{partial^2 C}{partial x^2} +
-D_y \frac{\partial^2 C}{\partial y^2} +
-D_z \frac{\partial^2 C}{\partial z^2} -
-v_x \frac{\partial C}{\partial x} -
-\lambda RC
+\frac{\partial C}{\partial t} = D_x \frac{\partial^2  \xi_x C}{\partial x^2} +
+D_y \frac{\partial^2  \xi_y C}{\partial y^2} +
+D_z \frac{\partial^2  \xi_z C}{\partial z^2} -
+v_x \frac{\partial  \xi_x C}{\partial x} - R
 \end{equation}
 
 Here $D$ is the ``diffusion coefficient'', $\nu$ is the ``advection rate'' (or velocity), and $A_x$ and $\xi$ are the surface area and volume fraction, respectively.
@@ -219,7 +218,7 @@ What you look at this equation, think about how it makes you feel. It's a bit in
 
 \end{quote} 
 
-First, let's simplify this to 1-D (in one direction, x).
+First, let's simplify this to 1-D (in one direction, x). The movement of compounds in the environment is driven by two processes, advection and diffusion -- these terms associated with $\partial x$ define movement. The third term on the right, $R$, is the reaction term.
 
 \begin{equation}
 \frac{\partial C}{\partial t} = D \frac{\partial^2 C}{\partial x^2} - \nu \frac{\partial C}{\partial x} - R
@@ -262,7 +261,7 @@ D \frac{\partial^2 C}{\partial x^2} - \nu \frac{\partial C}{\partial x} - R
 
 where $\nu = v/A_x \xi_x$ is the ``velocity'' of the fluid.
 
-The movement of compounds in the environment is driven by two processes, advection and diffusion. Of course, these processes occur in three dimensions, but for this class we'll begin with one dimensional processes before getting to more complicated examples.
+ Of course, these processes occur in three dimensions, but for this class we'll begin with one dimensional processes before getting to more complicated examples.
 
 Nevertheless, let's look at the 3-D advection-diffusion-reacton equation in three dimensions:
 
@@ -493,7 +492,7 @@ For this example, we will solve the advection-diffusion-reaction equation for a 
 
 
 % latex table generated in R 4.2.2 by xtable 1.8-4 package
-% Tue Feb 20 08:12:30 2024
+% Tue Feb 20 08:22:36 2024
 \begin{table}[ht]
 \centering
 \begin{tabular}{rr}
@@ -562,7 +561,7 @@ We can look at the output, using a simple call of the object, but without more i
 ## [1] 0.092296
 ## 
 ## attr(,"precis")
-## [1] 3.715027e-01 1.729137e-09
+## [1] 3.898583e-01 1.614714e-09
 ## attr(,"steady")
 ## [1] TRUE
 ## attr(,"class")
@@ -613,7 +612,7 @@ Thus, we might be better off plotting the output. I am not sure why the plot fun
 \end{alltt}
 \begin{verbatim}
 ##    user  system elapsed 
-##   0.002   0.000   0.002
+##   0.002   0.000   0.001
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -648,7 +647,7 @@ user systemelapsed 0.02 0.00 0.00 Thevaluesofthestate-variables(y)areplottedagai
 \end{alltt}
 \begin{verbatim}
 ##    user  system elapsed 
-##   0.164   0.017   0.183
+##   0.153   0.010   0.164
 \end{verbatim}
 \begin{alltt}
 \hlkwd{tail}\hlstd{(out[,}\hlnum{1}\hlopt{:}\hlnum{4}\hlstd{],}\hlkwc{n}\hlstd{=}\hlnum{3}\hlstd{)}
@@ -842,7 +841,7 @@ It takes about 0.5 second to solve this 10000 state variable model.
 \end{alltt}
 \begin{verbatim}
 ##    user  system elapsed 
-##   0.240   0.005   0.247
+##   0.203   0.003   0.207
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -900,7 +899,7 @@ we assume that the substance is produced in 50 randomly chosen cells (ii) at a c
 \end{alltt}
 \begin{verbatim}
 ##    user  system elapsed 
-##   0.079   0.003   0.082
+##   0.066   0.008   0.074
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
